--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
     th { background: #6B48FF; font-weight: 600; }
     td { color: #EDEDED; }
     .checkin-btn { background: #28A745; }
-    .checkout-btn { background: #DC3545; }
     .charge-btn { background: #FFC107; color: #1A1A1A; }
     .delete-btn { background: #808080; }
     .button-group button, .form button { width: auto; min-width: 150px; }
@@ -210,7 +209,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="https://via.placeholder.com/60x60.png?text=SE2" alt="SE2 Silent Disco Logo">
+      <img src="https://picsum.photos/id/237/60/60" alt="SE2 Silent Disco Logo">
       <h1>SE2 Silent Disco Tracker</h1>
     </header>
     <div class="button-group">
@@ -1099,7 +1098,6 @@ The SE2 Silent Disco Team
         if (rowData.some(data => data.toLowerCase().includes(searchTerm)) && (!dateFilter || hp.agreement?.date === dateFilter)) {
           const row = document.createElement('tr');
           let actionsHtml = '';
-          if (hp.status !== 'checked_out') actionsHtml += `<button class="checkout-btn" onclick="showCheckoutDialog('${hp.id}')">Check Out</button>`;
           if (hp.status === 'checked_out') actionsHtml += `<button class="checkin-btn" onclick="showReturnDialog('${hp.id}')">Check In</button>`;
           if (hp.status === 'checked_out' && hp.pre_auth && overdue) actionsHtml += `<button class="charge-btn" onclick="dashboardCharge('${hp.id}')">Charge</button>`;
           row.innerHTML = `
