--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="https://picsum.photos/id/237/60/60" alt="SE2 Silent Disco Logo">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWBhKlwtFnBvx5elx7r_rqfffG3tFbfcg3OA&s" alt="SE2 Silent Disco Logo">
       <h1>SE2 Silent Disco Tracker</h1>
     </header>
     <div class="button-group">
